audela/src/include/abmc.h

   //=============================================================================
   // IArray 
   //=============================================================================
   extern "C" ABMC_API void        IArray_deleteInstance(IArray* dataArray);
   extern "C" ABMC_API int         IArray_size(IArray* dataArray);
   extern "C" ABMC_API int         IIntArray_at(IIntArray* dataArray, int index);
   extern "C" ABMC_API const char* IStringArray_at(IStringArray* dataArray, int index);
   extern "C" ABMC_API void*       IStructArray_at(IStructArray* dataArray, int index);